Even if the pointer of the current album does not change, but the query of the change, emit the currentAlbumChanged signal. Then, the preview mode is reset properly.

BUG: 243066

svn path=/branches/extragear/graphics/digikam/core/; revision=1217510